samples/_failures_safe/1761704092_c3a196_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_537b1c7d.c: In function ‘main’:
./samples/SAFE/__tmp_537b1c7d.c:147:5: error: expected declaration or statement at end of input
  147 |     input[strcspn(input, "\n")] = 0;
      |     ^~~~~
